--- a/source/common/common.vcxproj.filters
+++ b/source/common/common.vcxproj.filters
@@ -103,9 +103,6 @@
     <ClCompile Include="ucol_swp.cpp">
       <Filter>collation</Filter>
     </ClCompile>
-    <ClCompile Include="lrucache.cpp">
-      <Filter>collections</Filter>
-    </ClCompile>
     <ClCompile Include="propsvec.c">
       <Filter>collections</Filter>
     </ClCompile>
@@ -122,6 +119,9 @@
       <Filter>collections</Filter>
     </ClCompile>
     <ClCompile Include="ulist.c">
+      <Filter>collections</Filter>
+    </ClCompile>
+    <ClCompile Include="unifiedcache.cpp">
       <Filter>collections</Filter>
     </ClCompile>
     <ClCompile Include="ustack.cpp">
@@ -616,9 +616,6 @@
     <ClInclude Include="hash.h">
       <Filter>collections</Filter>
     </ClInclude>
-    <ClInclude Include="lrucache.h">
-      <Filter>collections</Filter>
-    </ClInclude>
     <ClInclude Include="propsvec.h">
       <Filter>collections</Filter>
     </ClInclude>
@@ -635,6 +632,9 @@
       <Filter>collections</Filter>
     </ClInclude>
     <ClInclude Include="ulist.h">
+      <Filter>collections</Filter>
+    </ClInclude>
+    <ClInclude Include="unifiedcache.h">
       <Filter>collections</Filter>
     </ClInclude>
     <ClInclude Include="ustrenum.h">
@@ -707,9 +707,6 @@
       <Filter>data &amp; memory</Filter>
     </ClInclude>
     <ClInclude Include="sharedobject.h">
-      <Filter>data &amp; memory</Filter>
-    </ClInclude>
-    <ClInclude Include="sharedptr.h">
       <Filter>data &amp; memory</Filter>
     </ClInclude>
     <ClInclude Include="ucln.h">
