ICU-7747 Cmake: checkin early prototype. NO data building. Generate sources list from dependencies.txt based on http://source.icu-project.org/repos/icu/icu/branches/wmason/cmake7747-2/
X-SVN-Rev: 36680

--- a/.gitattributes
+++ b/.gitattributes
@@ -49,10 +49,16 @@ README text !eol
 *.tri2 -text
 
 /icu4c.css -text
+source/CMakeLists.txt -text
 source/aclocal.m4 -text
 source/allinone/icucheck.bat -text
+source/cmake-modules/Configure.cmake -text
+source/cmake-modules/IcuLibrary.cmake -text
+source/cmake-modules/IcuPaths.cmake -text
+source/common/CMakeLists.txt -text
 source/common/common.vcxproj -text
 source/common/common.vcxproj.filters -text
+source/data/CMakeLists.txt -text
 source/data/curr/pool.res -text
 source/data/in/coll/ucadata-implicithan.icu -text
 source/data/in/coll/ucadata-unihan.icu -text
@@ -74,55 +80,78 @@ source/data/unit/pool.res -text
 source/data/zone/pool.res -text
 source/extra/uconv/uconv.vcxproj -text
 source/extra/uconv/uconv.vcxproj.filters -text
+source/i18n/CMakeLists.txt -text
 source/i18n/i18n.vcxproj -text
 source/i18n/i18n.vcxproj.filters -text
+source/io/CMakeLists.txt -text
 source/io/io.vcxproj -text
 source/io/io.vcxproj.filters -text
+source/layout/CMakeLists.txt -text
 source/layout/layout.vcxproj -text
 source/layout/layout.vcxproj.filters -text
+source/layoutex/CMakeLists.txt -text
 source/layoutex/layoutex.vcxproj -text
 source/layoutex/layoutex.vcxproj.filters -text
+source/samples/CMakeLists.txt -text
+source/samples/break/CMakeLists.txt -text
 source/samples/break/break.vcxproj -text
 source/samples/break/break.vcxproj.filters -text
+source/samples/cal/CMakeLists.txt -text
 source/samples/cal/cal.vcxproj -text
 source/samples/cal/cal.vcxproj.filters -text
+source/samples/case/CMakeLists.txt -text
 source/samples/case/case.vcxproj -text
 source/samples/case/case.vcxproj.filters -text
+source/samples/citer/CMakeLists.txt -text
 source/samples/citer/citer.vcxproj -text
 source/samples/citer/citer.vcxproj.filters -text
+source/samples/coll/CMakeLists.txt -text
 source/samples/coll/coll.vcxproj -text
 source/samples/coll/coll.vcxproj.filters -text
+source/samples/csdet/CMakeLists.txt -text
 source/samples/csdet/csdet.vcxproj -text
 source/samples/csdet/csdet.vcxproj.filters -text
+source/samples/date/CMakeLists.txt -text
 source/samples/date/date.vcxproj -text
 source/samples/date/date.vcxproj.filters -text
+source/samples/datecal/CMakeLists.txt -text
+source/samples/datefmt/CMakeLists.txt -text
 source/samples/datefmt/datefmt.vcxproj -text
 source/samples/datefmt/datefmt.vcxproj.filters -text
 source/samples/dtitvfmtsample/dtitvfmtsample.vcxproj -text
 source/samples/dtitvfmtsample/dtitvfmtsample.vcxproj.filters -text
 source/samples/dtptngsample/dtptngsample.vcxproj -text
 source/samples/dtptngsample/dtptngsample.vcxproj.filters -text
+source/samples/layout/CMakeLists.txt -text
 source/samples/layout/layout.vcxproj -text
 source/samples/layout/layout.vcxproj.filters -text
 source/samples/legacy/legacy.vcxproj -text
 source/samples/legacy/legacy.vcxproj.filters -text
+source/samples/msgfmt/CMakeLists.txt -text
 source/samples/msgfmt/msgfmt.vcxproj -text
 source/samples/msgfmt/msgfmt.vcxproj.filters -text
+source/samples/numfmt/CMakeLists.txt -text
 source/samples/numfmt/numfmt.vcxproj -text
 source/samples/numfmt/numfmt.vcxproj.filters -text
 source/samples/plurfmtsample/plurfmtsample.vcxproj -text
 source/samples/plurfmtsample/plurfmtsample.vcxproj.filters -text
+source/samples/props/CMakeLists.txt -text
 source/samples/props/props.vcxproj -text
 source/samples/props/props.vcxproj.filters -text
+source/samples/strsrch/CMakeLists.txt -text
 source/samples/strsrch/strsrch.vcxproj -text
 source/samples/strsrch/strsrch.vcxproj.filters -text
+source/samples/translit/CMakeLists.txt -text
 source/samples/translit/translit.vcxproj -text
 source/samples/translit/translit.vcxproj.filters -text
+source/samples/uciter8/CMakeLists.txt -text
 source/samples/uciter8/uciter8.vcxproj -text
 source/samples/uciter8/uciter8.vcxproj.filters -text
+source/samples/ucnv/CMakeLists.txt -text
 source/samples/ucnv/data02.bin -text
 source/samples/ucnv/ucnv.vcxproj -text
 source/samples/ucnv/ucnv.vcxproj.filters -text
+source/samples/udata/CMakeLists.txt -text
 source/samples/udata/reader.vcxproj -text
 source/samples/udata/reader.vcxproj.filters -text
 source/samples/udata/writer.vcxproj -text
@@ -137,16 +166,23 @@ source/samples/uresb/uresb.vcxproj -text
 source/samples/uresb/uresb.vcxproj.filters -text
 source/samples/ustring/ustring.vcxproj -text
 source/samples/ustring/ustring.vcxproj.filters -text
+source/stubdata/CMakeLists.txt -text
 source/stubdata/stubdata.vcxproj -text
 source/stubdata/stubdata.vcxproj.filters -text
+source/test/CMakeLists.txt -text
+source/test/cintltst/CMakeLists.txt -text
 source/test/cintltst/cintltst.vcxproj -text
 source/test/cintltst/cintltst.vcxproj.filters -text
+source/test/depstest/gencmake.py -text
 source/test/depstest/icu-dependencies-mode.el -text
+source/test/intltest/CMakeLists.txt -text
 source/test/intltest/intltest.vcxproj -text
 source/test/intltest/intltest.vcxproj.filters -text
 source/test/intltest/quantityformattertest.cpp -text
+source/test/iotest/CMakeLists.txt -text
 source/test/iotest/iotest.vcxproj -text
 source/test/iotest/iotest.vcxproj.filters -text
+source/test/letest/CMakeLists.txt -text
 source/test/letest/cletest.vcxproj -text
 source/test/letest/cletest.vcxproj.filters -text
 source/test/letest/gendata.vcxproj -text
@@ -188,38 +224,55 @@ source/test/testdata/iscii.bin -text
 source/test/testdata/old_e_testtypes.res -text
 source/test/testdata/old_l_testtypes.res -text
 source/test/testdata/uni-text.bin -text
+source/tools/CMakeLists.txt -text
+source/tools/ctestfw/CMakeLists.txt -text
 source/tools/ctestfw/ctestfw.vcxproj -text
 source/tools/ctestfw/ctestfw.vcxproj.filters -text
+source/tools/genbrk/CMakeLists.txt -text
 source/tools/genbrk/genbrk.vcxproj -text
 source/tools/genbrk/genbrk.vcxproj.filters -text
+source/tools/genccode/CMakeLists.txt -text
 source/tools/genccode/genccode.vcxproj -text
 source/tools/genccode/genccode.vcxproj.filters -text
+source/tools/gencfu/CMakeLists.txt -text
 source/tools/gencfu/gencfu.vcxproj -text
 source/tools/gencfu/gencfu.vcxproj.filters -text
+source/tools/gencmn/CMakeLists.txt -text
 source/tools/gencmn/gencmn.vcxproj -text
 source/tools/gencmn/gencmn.vcxproj.filters -text
+source/tools/gencnval/CMakeLists.txt -text
 source/tools/gencnval/gencnval.vcxproj -text
 source/tools/gencnval/gencnval.vcxproj.filters -text
 source/tools/gendict/gendict.vcxproj -text
 source/tools/gendict/gendict.vcxproj.filters -text
+source/tools/gennorm2/CMakeLists.txt -text
 source/tools/gennorm2/gennorm2.vcxproj -text
+source/tools/genrb/CMakeLists.txt -text
 source/tools/genrb/derb.vcxproj -text
 source/tools/genrb/derb.vcxproj.filters -text
 source/tools/genrb/genrb.vcxproj -text
 source/tools/genrb/genrb.vcxproj.filters -text
+source/tools/gensprep/CMakeLists.txt -text
 source/tools/gensprep/gensprep.vcxproj -text
 source/tools/gensprep/gensprep.vcxproj.filters -text
+source/tools/gentest/CMakeLists.txt -text
 source/tools/gentest/gentest.vcxproj -text
 source/tools/gentest/gentest.vcxproj.filters -text
+source/tools/icuinfo/CMakeLists.txt -text
 source/tools/icuinfo/icuinfo.vcxproj -text
 source/tools/icuinfo/testplug.vcxproj -text
 source/tools/icuinfo/testplug.vcxproj.filters -text
+source/tools/icupkg/CMakeLists.txt -text
 source/tools/icupkg/icupkg.vcxproj -text
+source/tools/icuswap/CMakeLists.txt -text
 source/tools/icuswap/icuswap.vcxproj -text
+source/tools/makeconv/CMakeLists.txt -text
 source/tools/makeconv/makeconv.vcxproj -text
 source/tools/makeconv/makeconv.vcxproj.filters -text
+source/tools/pkgdata/CMakeLists.txt -text
 source/tools/pkgdata/pkgdata.vcxproj -text
 source/tools/pkgdata/pkgdata.vcxproj.filters -text
+source/tools/toolutil/CMakeLists.txt -text
 source/tools/toolutil/toolutil.vcxproj -text
 source/tools/tzcode/icuregions -text
 source/tools/tzcode/icuzdump.vcxproj -text
