--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@ source/data/build-dir
 source/data/build-local
 source/data/icupkg.inc
 source/data/in
+source/data/in/icudt55l.dat
 source/data/makedata.vcproj.*.*.user
 source/data/obj
 source/data/out
