ICU-11617 initial builder (no automation yet)
X-SVN-Rev: 37311

--- a/.gitattributes
+++ b/.gitattributes
@@ -80,6 +80,9 @@ multi/proj/provider/Makefile.local-sample -text
 multi/proj/provider/icu-config.sed -text
 multi/proj/provider/readme.txt -text
 release/c/bomfix.py -text
+release/c/icu4c-data-npm/dist/README.md -text
+release/c/icu4c-data-npm/package-dist-template.json -text
+release/c/icu4c-data-npm/package.json -text
 release/java/.classpath -text
 release/java/.project -text
 release/java/Makefile -text
