--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ multi/proj/icu4jscan/bin
 multi/proj/provider/Makefile.local
 multi/proj/provider/out
 multi/tmp
+release/c/icu4c-data-npm/dist/icu*.dat
+release/c/icu4c-data-npm/dist/package.json
 release/c/uconfigtest
 release/c/uconfigtest.local
 release/java/APIChangeReport*
