--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,10 @@ multi/proj/icu4jscan/bin
 multi/proj/provider/Makefile.local
 multi/proj/provider/out
 multi/tmp
+release/c/icu4c-data-npm/*.dat
 release/c/icu4c-data-npm/dist/icu*.dat
 release/c/icu4c-data-npm/dist/package.json
+release/c/icu4c-data-npm/node_modules
 release/c/uconfigtest
 release/c/uconfigtest.local
 release/java/APIChangeReport*
