--- a/release/c/icu4c-data-npm/package.json
+++ b/release/c/icu4c-data-npm/package.json
@@ -3,12 +3,16 @@
   "version": "0.0.1",
   "description": "ICU4C data generator",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "gen": "node index.js"
   },
   "keywords": [
     "icu4c"
   ],
   "author": "The ICU Team; © 1997-2015 IBM Corporation and Others, All Rights Reserved",
   "license": "MIT/X",
-  "main": "index.js"
+  "main": "index.js",
+  "dependencies": {
+    "minimist": "^1.1.1",
+    "npm": "^2.7.4"
+  }
 }
