--- a/.gitattributes
+++ b/.gitattributes
@@ -82,6 +82,13 @@ multi/proj/provider/readme.txt -text
 release/c/bomfix.py -text
 release/c/icu4c-data-npm/README.md -text
 release/c/icu4c-data-npm/dist/README.md -text
+release/c/icu4c-data-npm/full-icu/.npmignore -text
+release/c/icu4c-data-npm/full-icu/README.md -text
+release/c/icu4c-data-npm/full-icu/full-icu.js -text
+release/c/icu4c-data-npm/full-icu/install-npm.js -text
+release/c/icu4c-data-npm/full-icu/install-spawn.js -text
+release/c/icu4c-data-npm/full-icu/package.json -text
+release/c/icu4c-data-npm/full-icu/postinstall.js -text
 release/c/icu4c-data-npm/package-dist-template.json -text
 release/c/icu4c-data-npm/package.json -text
 release/java/.classpath -text
