ICU-10152 Clean up of the ant targets + fail on error
X-SVN-Rev: 38755

--- a/.gitattributes
+++ b/.gitattributes
@@ -49,6 +49,7 @@ README text !eol
 *.tri2 -text
 
 /ivy.xml -text
+lib/.project -text
 main/shared/data/icudata.jar -text
 main/shared/data/icutzdata.jar -text
 main/shared/data/testdata.jar -text
