ICU-13218 Workaround for collation performance issue for Thai locale caused by frquent mutext lock on POSIX platforms.
X-SVN-Rev: 40139

--- a/source/common/common.vcproj
+++ b/source/common/common.vcproj
@@ -3264,7 +3264,7 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath=".\unorm_it.c"
+				RelativePath=".\unorm_it.cppssssss"
 				>
 			</File>
 			<File
