ICU-13218 Fixed a problem in vcproject file in last commit.
X-SVN-Rev: 40140

--- a/source/common/common.vcproj
+++ b/source/common/common.vcproj
@@ -3264,7 +3264,7 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath=".\unorm_it.cppssssss"
+				RelativePath=".\unorm_it.cpp"
 				>
 			</File>
 			<File
